dark mode fixes

--- a/MyResume/assets/css/main.css
+++ b/MyResume/assets/css/main.css
@@ -25,7 +25,7 @@
     /* Default color used for the majority of the text content across the entire website */
     --heading-color: #45505b;
     /* Color for headings, subheadings and title throughout the website */
-    --accent-color: #055929;
+    --accent-color: #19d169;
     /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
     --surface-color: #ffffff;
     /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
@@ -186,7 +186,7 @@ h2 {
     bottom: 43px;
     left: 0;
     right: 0;
-    max-width: 800px;
+    max-width: 900px;
     /* Max width of nav bar */
     margin: auto;
     /* Center horizontally */
